--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
         "psr-4": {
             "MiguelAlcaino\\KushkiBundle\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7"
     }
 }
