--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "*"
+        "symfony/phpunit-bridge": "^3.4|^4.0"
     }
 }
