--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,11 +1,12 @@
 parameters:
     kushki_public_id: '%env(KUSHKI_PUBLIC_ID)%'
     kushki_private_id: '%env(KUSHKI_PRIVATE_ID)%'
+    kushki_is_dev: '%env(bool:KUSHKI_IS_DEV)%'
     env(KUSHKI_PUBLIC_ID): 'YOUR-KUSHKI-PUBLIC-ID'
     env(KUSHKI_PRIVATE_ID): 'YOUR-KUSHKI-PRIVATE-ID'
     env(KUSHKI_LANG): 'kushki\lib\KushkiLanguage::ES'
     env(KUSHKI_CURRENCY): 'kushki\lib\KushkiCurrency::COP'
-    env(KUSHKI_ENV): 'kushki\lib\KushkiEnvironment::TESTING'
+    env(KUSHKI_IS_DEV): 'true'
 
 services:
     _defaults:
@@ -18,9 +19,9 @@ services:
             $kushki: '@kushki'
     MiguelAlcaino\KushkiBundle\Service\KushkiService: '@miguelalcaino.kushki.service'
     kushki:
-        class: kushki\lib\Kushki
+        factory: App\Service\KushkiFactory:create
         arguments:
             - '%kushki_private_id%'
             - '%env(const:KUSHKI_LANG)%'
             - '%env(const:KUSHKI_CURRENCY)%'
-            - '%env(const:KUSHKI_ENV)%'
+            - '%kushki_is_dev%'
